initializing the repository to hold configuration/applications for Streaming CEP session

--- a/README.adoc
+++ b/README.adoc
@@ -1,7 +1,7 @@
 = Streaming CEP
 
 = SCENARIO (Design)
-image:images/design.png["VertX Application",height=356]
+image:images/design.png["Streaming CEP Appication Design",height=356]
 
 = Pre-Requisites
 * OCP
