--- a/README.adoc
+++ b/README.adoc
@@ -59,6 +59,23 @@ Use Streams: If you need to report on or take action immediately as  data  arriv
 Don't: If  you  need  to  perform  in-depth analysis or are compiling a large repository of data for later analysis, a stream-processing approach  may  not  be  a  good  fit.  Let’s  now  walk  through  a  concrete  example  of  stream processing
 
 
+== KAFKA Streams Code Example
+KStream <Integer, Integer> input =  builder.stream(“numbers-topic”);
+
+* *Stateless computation*
+
+[source, java]
+----
+KStream<Integer, Integer> doubled = input.mapValues(v -> v * 2);
+----
+
+* *Stateful computation*
+
+[source, java]
+----
+KTable<Integer, Integer> sumOfOdds= input.filter((k,v) -> v % 2 != 0).selectKey((k, v) -> 1).reduceByKey((v1, v2) -> v1 + v2, ”sum-of-odds");
+----
+
 == Resources
 * iot-amq-streams demo:
 
