--- a/README.adoc
+++ b/README.adoc
@@ -3,6 +3,26 @@
 = SCENARIO (Design)
 image:images/design.png["Streaming CEP Appication Design",height=356]
 
+== Goals
+
+Our goals based on the use case and implemented code is to show
+- How it is possible to do CEP on top of OCP
+- How to size such an environment
+- What was the architecture (learnings good/bad)
+- What was failover/scalability of the environment app (learnings good/bad)
+- What was the performance (report on constraints)
+
+
+== Architectures
+
+=== Architecture 1 - In Stream CEP Processing (Preferable)
+
+image:images/OCP-CEP-Architecture-Option-2-RealTime.PNG["In Stream Realtime CEP",height=356] 
+
+=== Architecture 2 - Micro-Batching CEP Processing
+
+image:images/OCP-CEP-Architecture-Option-1-Micro-Batching.png["Micro-Batching CEP",height=356] 
+
 = Pre-Requisites
 * OCP
 * KAFKA Cluster Configuration
