--- a/README.adoc
+++ b/README.adoc
@@ -1,22 +1,23 @@
 = Streaming CEP
+:toc:
 
 = SCENARIO (Design)
 
 *TBD*
 
-Topic 1: Transaction
-          --> GDPR (filter personal details)
-               --> Rewards Poings --> period (size)
-               --> Fraud --> period (time)
-               --> Credit Scoring --> period (time & size)
-                                        --> Increase/Decrease/Adjust credit card limit
+*Topic 1:* Transaction
+* --> GDPR (filter personal details)
+** --> Rewards Poings --> period (size)
+** --> Fraud --> period (time)
+** --> Credit Scoring --> period (time & size)
+***   --> Increase/Decrease/Adjust credit card limit
 
-(maybe Topic 3?)   --> Product Scoring --> combine streams (Fraud, Rewards, Credit Scoring) --> over a period --> 
-					--> Open up new Offers
-					--> Revoke offers
+*(maybe Topic 3?)*   --> Product Scoring --> combine streams (Fraud, Rewards, Credit Scoring) --> over a period --> 
+** --> Open up new Offers
+** --> Revoke offers
 
-Topic 2: Products
-	  --> ??
+*Topic 2:* Products
+**  --> ??
 
 == Goals
 
