--- a/README-KAFKA.adoc
+++ b/README-KAFKA.adoc
@@ -1,6 +1,8 @@
 = KAFKA
 
-This are the fundamentals to be aware about KAFKA that may affect scenario building
+These are the fundamentals to be aware about KAFKA that may affect scenario building
+
+:toc:
 
 == KAFKA Logs
 
