--- a/README-KAFKA-STREAMs.adoc
+++ b/README-KAFKA-STREAMs.adoc
@@ -112,7 +112,8 @@ Timestamps play a role in key areas of Kafka Streams functionality:
 * Updating a changelog ( KTable API)
 * Deciding when the Processor.punctuate method is triggered (Processor API)
 
-In stream processing, you can group timestamps into 3 categories,
+In stream processing, you can group timestamps into 3 categories:
+
 1. *Event time:* A timestamp set when the event occurred, usually embedded in the object used to represent the event..
 2. *Ingestion time:*  A timestamp set when the data first enters the data processing pipeline. You can consider the timestamp set by the Kafka broker (assuming a configuration setting of LogAppendTime ) to be ingestion time.
 3. *Processing time:* A timestamp set when the data or event record first starts to flow through a processing pipeline.p
